--- a/src/styles.css
+++ b/src/styles.css
@@ -57,8 +57,8 @@ body {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #dcff95;
+  border: 2px solid hsl(0, 54%, 68%);
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -73,7 +73,7 @@ body {
 
 .board-row:after {
   clear: both;
-  content: '';
+  content: "";
   display: table;
 }
 
