--- a/src/styles.css
+++ b/src/styles.css
@@ -57,8 +57,8 @@ body {
 }
 
 .square {
-  background: #dcff95;
-  border: 2px solid #d98181;
+  background: #fff;
+  border: 1px solid #999;
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -69,6 +69,10 @@ body {
   padding: 0;
   text-align: center;
   width: 34px;
+}
+
+.gray_square {
+  background-color: #ccc;
 }
 
 .board-row:after {
