勝ったラインを赤くする

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,10 @@ body {
   background-color: #ccc;
 }
 
+.isred {
+  background-color: #e37a7a;
+}
+
 .board-row:after {
   clear: both;
   content: "";
